@@ -1028,6 +1028,7 @@ COpt::memoryPick();
 				$item['interfaceid'] = 0;
 			}
 
+
 			if((isset($item['port']) && !zbx_empty($item['port']))
 				&& !((zbx_ctype_digit($item['port']) && ($item['port']>0) && ($item['port']<=65535))
 				|| preg_match('/^'.ZBX_PREG_EXPRESSION_USER_MACROS.'$/u', $item['port']))
